# nepse-temporal-ai

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
configs/experiments/: surveillance_baselines_2024_2025.json  surveillance_baselines_smoke.json  surveillance_explainability.json  surveillance_explainability_smoke.json  surveillance_explanation_sanity.json  surveillance_journal_robustness.json  surveillance_robustness.json  temporal_surveillance_2024_2025.json  temporal_surveillance_analysis.json  temporal_surveillance_analysis_smoke.json  temporal_surveillance_smoke.json
data/: README.md
results/: README.md
results/paper/surveillance_explainability/: explanation_stability.json  lgbm_tree_shap.parquet  lgbm_tree_shap_summary.csv  metadata.json  replay_integrity.csv  temporal_occlusion.parquet  temporal_occlusion_summary.csv  temporal_seed_rank_stability.csv
results/paper/surveillance_robustness/: cost_utility.csv  (+10 more)
results/summary/: main_result_table.csv  main_result_table.md
scripts/: analyze_temporal_surveillance.py  create_manuscript_results_figures.py  explain_temporal_surveillance.py  finalize_surveillance_evidence.py  prepare_graph_benchmark.py  run_journal_completion.ps1  run_robustness_checks.sh  run_rolling_baselines.py  run_surveillance_baselines.py  run_temporal_surveillance.py  run_temporal_surveillance_experiment.ps1  run_temporal_surveillance_experiment.sh  transaction_graph_loader.py  validate_explanation_sanity.py  validate_release.py
src/nepse_ai/: __init__.py
tests/: test_release.py
(+46 files in other folders)
