[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nepse-ai"
version = "0.1.0"
description = "Reproducible temporal graph learning for NEPSE market stress"
requires-python = ">=3.12"
license = "MIT"

[project.urls]
Repository = "https://github.com/ghimiredhikura/nepse-temporal-ai"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
